--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html class="nojs">
 <head>
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,width=device-width" />
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,900|Material+Icons&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="{{ "css/base.css" | relURL }}" />
   {{- block "styles" . }}{{- end }}
