--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,6 +42,9 @@
               <p class="news-latest-preview">
                 {{ $newsLatest.Params.content | truncate 200 }}
               </p>
+              <div class="news-latest-actions">
+                <
+              </div>
             </div>
           </div>
         </div>
@@ -64,45 +67,66 @@
   <section
     id="events"
     class="events shared-main-section">
-    <h2 class="shared-section-header">Events</h2>
-    {{ range where .Site.RegularPages "Section" "==" "events" }}
-      <div class="events-container shared-card">
-        {{ $baseGeocodeUrl := "https://geocoding.geo.census.gov/geocoder/locations/onelineaddress?format=json&benchmark=Public_AR_Current&" }}
+    <h2 class="shared-section-header events-header">
+      Events
+    </h2>
+    <div class="events-scroller">
+    {{ range sort (where .Site.RegularPages "Section" "==" "events") ".Params.start_date" "asc" }}
+      <div class="shared-card events-container">
+        {{ $baseGeocodeUrl := "https://geocoding.geo.census.gov/geocoder/geographies/onelineaddress?format=json&benchmark=Public_AR_Current&vintage=Current_Current&" }}
         {{ $geocodeUrl := strings.TrimLeft " " (strings.TrimRight " " (string (delimit (slice $baseGeocodeUrl (querify "address" .Params.location.address)) ""))) }}
         {{ $geocodeJson := getJSON $geocodeUrl }}
         {{ $coordinate := (index $geocodeJson.result.addressMatches 0).coordinates }}
         {{ $coordinateStr := delimit (slice (string $coordinate.x) (string $coordinate.y)) "," }}
         {{ $baseMapParams := querify "access_token" "pk.eyJ1IjoibHVrZXdlc3RieSIsImEiOiJjanVrb3phNGsxeTdxNDNwZ2MybTQwNHl3In0.cD1c7AwcVaia7W4g-f5gLQ" }}
         {{ $mapUrl := delimit (slice "https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/pin-s+000(" $coordinateStr ")/" $coordinateStr ",14,0,0/600x600?" $baseMapParams) "" }}
-        <div class="shared-card-inner">
+        <div class="shared-card-inner events-container-inner">
           <img class="events-map" src="{{ $mapUrl }}" />
-          <div class="events-info">
-            <h3>{{ .Params.title }}</h3>
-            <div class="events-info-grid">
-              <span class="material-icons">event</span>
-              <div>
-                <p>{{ dateFormat "January 1, 2006" .Params.start_date }}</p>
-                <p>
-                  {{ dateFormat "3:00pm" .Params.start_date }} - {{ dateFormat "3:00pm" .Params.end_date }}
-                </p>
-              </div>
-              <span class="material-icons">place</span>
-              <div>
-                <p>{{ .Params.location.name }}</p>
-                <p>{{ .Params.location.address }}</p>
-              </div>
-              {{ if .Params.is_accessible }}
-                <span class="material-icons">accessible</span>
-                <span>Wheelchair Accessible</span>
-              {{ end }}
-              <span class="material-icons">info</span>
-              <div>
-                {{ .Params.details | markdownify }}
-              </div>
-            </div>
+          <h3 class="events-title">{{ .Params.title }}</h3>
+          <div class="events-icon">
+            {{ partial "icon.html" "event" }}
           </div>
+          <div class="events-detail-section">
+            {{ $startDate := (time .Params.start_date).Local }}
+            {{ $endDate := (time .Params.end_date).Local }}
+            <p class="events-start-date">
+              {{ dateFormat "January 2, 2006" $startDate }}
+            </p>
+            <p>
+              {{ dateFormat "3:00pm" $startDate }} - {{ dateFormat "3:00pm" $endDate }}
+            </p>
+          </div>
+          <div class="events-icon">
+            {{ partial "icon.html" "place"}}
+          </div>
+          <div class="events-detail-section">
+            <p class="events-location-name">
+              {{ .Params.location.name }}
+            </p>
+            <p>{{ .Params.location.address }}</p>
+          </div>
+          {{ if .Params.is_accessible }}
+            <div class="events-icon">
+              {{ partial "icon.html" "accessible"}}
+            </div>
+            <div class="events-detail-section">
+              Wheelchair Accessible
+            </div>
+          {{ end }}
+          <div class="events-icon">
+            {{ partial "icon.html" "info"}}
+          </div>
+          <div class="events-detail-section events-info-details">
+            {{ .Params.details | markdownify }}
+          </div>
+          {{ with .OutputFormats.Get "Calendar" }}
+            <div class="events-add">
+              <a href="webcal:{{ .RelPermalink | absURL }}">Add To Calendar</a>
+            </div>
+          {{ end }}
         </div>
       </div>
     {{ end }}
+    </div>
   </section>
 {{ end }}
