--- a/static/css/home.css
+++ b/static/css/home.css
@@ -150,7 +150,11 @@
 }
 
 .news-latest-info {
-  padding: 16px; 
+  padding: 16px;
+  display: grid;
+  grid-auto-flow: row;
+  grid-template-rows: auto 1fr auto;
+  grid-row-gap: 16px;
 }
 
 .news-latest-title {
@@ -173,31 +177,124 @@
 /*#region EVENTS */
 
 .events {
-  max-width: 960px;
   margin: 0 auto;
+  height: calc(100vh + 32px);
+  position: relative;
+  display: grid;
+  grid-template-rows: auto 1fr;
+  grid-auto-flow: row;
+  padding: 32px 8px;
 }
+
+.events-header {
+  max-width: 960px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.events-scroller {
+  overflow-x: auto;
+  display: grid;
+  grid-template-rows: minmax(0, auto);
+  grid-auto-flow: column;
+  grid-column-gap: 16px;
+  height: 100%;
+  position: relative;
+  min-height: 0;
+  scroll-snap-type: x mandatory;
+  padding: 0 calc(calc(100% - 960px) / 2);
+}
+
+@media (max-width: 960px) {
+  .events-scroller {
+    padding: 0;
+  }
+}
+
 
 .events-container {
   overflow: hidden;
   width: 500px;
+  max-width: calc(100vw - 16px);
   position: relative;
+  min-height: 0;
+  height: 100%;
+  scroll-snap-align: center;
+}
+
+.events-container-inner {
+  min-height: 0;
+  height: 100%;
+  overflow: hidden;
+  position: relative;
+  display: grid;
+  grid-template-rows: 240px auto auto auto auto 1fr auto 0;
+  grid-row-gap: 16px;
+  grid-template-columns: 0 auto auto 0;
+  grid-column-gap: 16px;
+  grid-auto-flow: row;
+  align-content: start;
+}
+
+.events-title {
+  grid-column: 2 / -2;
+  font-size: 20px;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+.events-icon {
+  grid-column: 2;
+}
+
+.events-detail-section {
+  grid-column: 3;
 }
 
 .events-map {
   display: block;
-  height: 240px;
-  width: 100%;
+  height: 100%;
   object-fit: cover;
+  grid-column: 1 / -1;
+  width: 100%;
 }
 
-.events-info {
-  padding: 16px;
+.events-start-date {
+  font-size: 20px;
+  line-height: 1;
 }
 
-.events-info-grid {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-auto-flow: dense;
+.events-location-name {
+  font-size: 20px;
+  line-height: 1;
 }
+
+.events-add {
+  grid-column: 2 / -2;
+}
+
+.events-info-details {
+  overflow-y: auto;
+  overflow-x: 0;
+  min-height: 0;
+  height: 100%;
+  position: relative;
+  -webkit-overflow-scrolling: touch;
+}
+  .events-info-details p {
+    margin: 12px 0;
+    word-wrap: break-word;
+  }
+    .events-info-details p:first-child {
+      margin-top: 0;
+    }
+    .events-info-details p:last-child {
+      margin-bottom: 0;
+    }
+  .events-info-details a {
+    color: var(--color-yellow);
+    text-decoration: none;
+  }
 
 /*#endregion */
