--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -5,6 +5,9 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,900|Material+Icons&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="{{ "css/base.css" | relURL }}" />
   {{- block "styles" . }}{{- end }}
+  <script src="https://unpkg.com/domready@1.0.8/ready.js"></script>
+  <script src="/js/base.js" async></script>
+  {{- block "scripts" . }}{{- end }}
 </head>
 <body>
   <main>
