--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,6 +3,21 @@
   <link rel="stylesheet" href="{{ $homeCss }}" />
 {{ end }}
 
+{{ define "scripts" }}
+  {{ partial "window_data_events.html" . }}
+  <script type="module">
+    import Calendar, { Event } from '/js/Calendar.js'
+    window.domready(() => {
+      customElements.whenDefined('sunrise-calendar').then(() => {
+        const calendar = document.querySelector('sunrise-calendar')
+        const events = window._data.events.map(e => new Event(e))
+        calendar.events = events.concat(events).concat(events)
+      })
+      customElements.define('sunrise-calendar', Calendar)
+    })
+  </script>
+{{ end }}
+
 {{ define "main" }}
   <section
     class="top"
@@ -66,62 +81,73 @@
   {{ end }}
   <section
     id="events"
-    class="events shared-main-section">
-    <h2 class="shared-section-header events-header">
-      Events
-    </h2>
-    <div class="events-scroller">
-    {{ range sort (where .Site.RegularPages "Section" "==" "events") ".Params.start_date" "asc" }}
-      <div class="shared-card events-container">
-        {{ $baseGeocodeUrl := "https://geocoding.geo.census.gov/geocoder/geographies/onelineaddress?format=json&benchmark=Public_AR_Current&vintage=Current_Current&" }}
-        {{ $geocodeUrl := strings.TrimLeft " " (strings.TrimRight " " (string (delimit (slice $baseGeocodeUrl (querify "address" .Params.location.address)) ""))) }}
-        {{ $geocodeJson := getJSON $geocodeUrl }}
-        {{ $coordinate := (index $geocodeJson.result.addressMatches 0).coordinates }}
-        {{ $coordinateStr := delimit (slice (string $coordinate.x) (string $coordinate.y)) "," }}
-        {{ $baseMapParams := querify "access_token" "pk.eyJ1IjoibHVrZXdlc3RieSIsImEiOiJjanVrb3phNGsxeTdxNDNwZ2MybTQwNHl3In0.cD1c7AwcVaia7W4g-f5gLQ" }}
-        {{ $mapUrl := delimit (slice "https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/pin-s+000(" $coordinateStr ")/" $coordinateStr ",14,0,0/600x600?" $baseMapParams) "" }}
-        <div class="shared-card-inner events-container-inner">
-          <img class="events-map" src="{{ $mapUrl }}" />
-          <h3 class="events-title">{{ .Params.title }}</h3>
-          <div class="events-icon">
-            {{ partial "icon.html" "event" }}
-          </div>
-          <div class="events-detail-section">
-            {{ $startDate := (time .Params.start_date).Local }}
-            {{ $endDate := (time .Params.end_date).Local }}
-            <p class="events-start-date">
-              {{ dateFormat "January 2, 2006" $startDate }}
-            </p>
-            <p>
-              {{ dateFormat "3:00pm" $startDate }} - {{ dateFormat "3:00pm" $endDate }}
-            </p>
-          </div>
-          <div class="events-icon">
-            {{ partial "icon.html" "place"}}
-          </div>
-          <div class="events-detail-section">
-            <p class="events-location-name">
-              {{ .Params.location.name }}
-            </p>
-            <p>{{ .Params.location.address }}</p>
-          </div>
-          {{ if .Params.is_accessible }}
-            <div class="events-icon">
-              {{ partial "icon.html" "accessible"}}
-            </div>
-            <div class="events-detail-section">
-              Wheelchair Accessible
-            </div>
-          {{ end }}
-          <div class="events-icon">
-            {{ partial "icon.html" "info"}}
-          </div>
-          <div class="events-detail-section events-info-details">
-            {{ .Params.details | markdownify }}
-          </div>
-        </div>
-      </div>
-    {{ end }}
+    class="events-interactive">
+    <h2 class="shared-section-header">Events</h2>
+    <div class="events-interactive-container">
+      <sunrise-calendar></sunrise-calendar>
     </div>
   </section>
+
+  <noscript>
+    <section
+      id="events"
+      class="events shared-main-section">
+      <h2 class="shared-section-header events-header">
+        Events
+      </h2>
+      <div class="events-scroller">
+      {{ range sort (where .Site.RegularPages "Section" "==" "events") ".Params.start_date" "asc" }}
+        <div class="shared-card events-container">
+          {{ $baseGeocodeUrl := "https://geocoding.geo.census.gov/geocoder/geographies/onelineaddress?format=json&benchmark=Public_AR_Current&vintage=Current_Current&" }}
+          {{ $geocodeUrl := strings.TrimLeft " " (strings.TrimRight " " (string (delimit (slice $baseGeocodeUrl (querify "address" .Params.location.address)) ""))) }}
+          {{ $geocodeJson := getJSON $geocodeUrl }}
+          {{ $coordinate := (index $geocodeJson.result.addressMatches 0).coordinates }}
+          {{ $coordinateStr := delimit (slice (string $coordinate.x) (string $coordinate.y)) "," }}
+          {{ $baseMapParams := querify "access_token" "pk.eyJ1IjoibHVrZXdlc3RieSIsImEiOiJjanVrb3phNGsxeTdxNDNwZ2MybTQwNHl3In0.cD1c7AwcVaia7W4g-f5gLQ" }}
+          {{ $mapUrl := delimit (slice "https://api.mapbox.com/styles/v1/mapbox/streets-v11/static/pin-s+000(" $coordinateStr ")/" $coordinateStr ",14,0,0/600x600?" $baseMapParams) "" }}
+          <div class="shared-card-inner events-container-inner">
+            <img class="events-map" src="{{ $mapUrl }}" />
+            <h3 class="events-title">{{ .Params.title }}</h3>
+            <div class="events-icon">
+              {{ partial "icon.html" "event" }}
+            </div>
+            <div class="events-detail-section">
+              {{ $startDate := (time .Params.start_date).Local }}
+              {{ $endDate := (time .Params.end_date).Local }}
+              <p class="events-start-date">
+                {{ dateFormat "January 2, 2006" $startDate }}
+              </p>
+              <p>
+                {{ dateFormat "3:00pm" $startDate }} - {{ dateFormat "3:00pm" $endDate }}
+              </p>
+            </div>
+            <div class="events-icon">
+              {{ partial "icon.html" "place"}}
+            </div>
+            <div class="events-detail-section">
+              <p class="events-location-name">
+                {{ .Params.location.name }}
+              </p>
+              <p>{{ .Params.location.address }}</p>
+            </div>
+            {{ if .Params.is_accessible }}
+              <div class="events-icon">
+                {{ partial "icon.html" "accessible"}}
+              </div>
+              <div class="events-detail-section">
+                Wheelchair Accessible
+              </div>
+            {{ end }}
+            <div class="events-icon">
+              {{ partial "icon.html" "info"}}
+            </div>
+            <div class="events-detail-section events-info-details">
+              {{ .Params.details | markdownify }}
+            </div>
+          </div>
+        </div>
+      {{ end }}
+      </div>
+    </section>
+  </noscript>
 {{ end }}
