--- a/static/css/base.css
+++ b/static/css/base.css
@@ -25,6 +25,12 @@ h1, h2, h3, h4, p {
   --shape-border-radius: 8px;
   --elevation-overlay-opacity-01dp: 0.05;
   --elevation-overlay-opacity-02dp: 0.07;
+  --elevation-overlay-color-01dp: rgba(255,255,255,0.05);
+  --elevation-overlay-color-02dp: rgba(255,255,255,0.07);
+  --elevation-overlay-color-04dp: rgba(255,255,255,0.09);
   --elevation-box-shadow-01dp: 0 1px 3px 0 rgba(0,0,0,0.20), 0 2px 1px -1px rgba(0,0,0,0.12), 0 1px 1px 0 rgba(0,0,0,0.14);
   --elevation-box-shadow-02dp: 0 1px 5px 0 rgba(0,0,0,0.20), 0 3px 1px -2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.14);
+  --elevation-box-shadow-03dp: 0 1px 8px 0 rgba(0,0,0,0.20), 0 3px 3px -2px rgba(0,0,0,0.12), 0 3px 4px 0 rgba(0,0,0,0.14);
+  --elevation-box-shadow-04dp: 0 2px 4px -1px rgba(0,0,0,0.20), 0 1px 10px 0 rgba(0,0,0,0.12), 0 4px 5px 0 rgba(0,0,0,0.14);
+  --state-overly-color-hover: rgba(255,255,255,0.04);
 }
