--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="{{ "css/base.css" | relURL }}" />
   {{- block "styles" . }}{{- end }}
   <script src="https://unpkg.com/domready@1.0.8/ready.js"></script>
-  <script src="/js/base.js" async></script>
+  <script src="{{ "js/base.js" | relURL }}" async></script>
   {{- block "scripts" . }}{{- end }}
 </head>
 <body>
