--- a/layouts/admin/list.html
+++ b/layouts/admin/list.html
@@ -1,4 +1,6 @@
-<!doctype html>
+{{ define "page" }}
+{{ $useFs := eq .Hugo.Environment "development" }}
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8" />
@@ -9,24 +11,30 @@
   <script>
     window.CMS_MANUAL_INIT = true
   </script>
+  {{ if $useFs }}
   <script src="https://unpkg.com/react@^16/umd/react.production.min.js"></script>
   <script src="https://unpkg.com/react-dom@^16/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/netlify-cms-default-exports@2.2.1/dist/netlify-cms-default-exports.js"></script>
+  {{ end }}
   <script src="https://unpkg.com/netlify-cms-app@2.9.0/dist/netlify-cms-app.js"></script>
+  {{ if $useFs }}
   <script src="https://unpkg.com/netlify-cms-backend-fs@0.4.4/dist/index.js"></script>
+  {{ end }}
   <script src="start.js"></script>
   <script>
-    (async function() {
+    (function() {
       const CMS = window.NetlifyCmsApp
+      const userConfig = {{ .Params }}
+      {{ if $useFs }}
       CMS.registerBackend('file-system', FileSystemBackendClass)
-      try {
-        const resp = await fetch('./config.json')
-        const userConfig = await resp.json()
-        window.startCMS(CMS, userConfig)
-      } catch (_) {
-        window.startCMS(CMS, {})
+      userConfig.backend = {
+        name: 'file-system',
+        api_root: 'http://localhost:1316/api',
       }
+      {{ end }}
+      window.startCMS(CMS, userConfig)
     }())
   </script>
 </body>
 </html>
+{{ end }}
