--- a/static/css/base.css
+++ b/static/css/base.css
@@ -32,5 +32,7 @@ h1, h2, h3, h4, p {
   --elevation-box-shadow-02dp: 0 1px 5px 0 rgba(0,0,0,0.20), 0 3px 1px -2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.14);
   --elevation-box-shadow-03dp: 0 1px 8px 0 rgba(0,0,0,0.20), 0 3px 3px -2px rgba(0,0,0,0.12), 0 3px 4px 0 rgba(0,0,0,0.14);
   --elevation-box-shadow-04dp: 0 2px 4px -1px rgba(0,0,0,0.20), 0 1px 10px 0 rgba(0,0,0,0.12), 0 4px 5px 0 rgba(0,0,0,0.14);
-  --state-overly-color-hover: rgba(255,255,255,0.04);
+  --state-overlay-color-hover: rgba(255,255,255,0.04);
+  --state-overlay-color-selected: rgba(255,255,255,0.12);
+  --state-border-color-selected: #fff;
 }
