--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,13 +3,12 @@
 <head>
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,width=device-width" />
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,900|Material+Icons&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="{{ "css/base.css" | relURL }}" />
+  <link rel="stylesheet" href="{{ (resources.Get "base.css").Permalink }}" />
   {{- block "styles" . }}{{- end }}
-  <script src="https://unpkg.com/domready@1.0.8/ready.js"></script>
-  <script src="{{ "js/base.js" | relURL }}" async></script>
   {{- block "scripts" . }}{{- end }}
 </head>
 <body>
+  <script>try { document.documentElement.classList.remove('nojs') } catch (e) { }</script>
   <main>
     {{- block "main" . }}{{- end }}
   </main>
