--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,7 +8,11 @@
   <script>
     try { document.documentElement.classList.remove('nojs') } catch (e) { }
     window._data = {}
+    window._data.basePath = '{{ $.Site.BaseURL }}'.replace(window.location.origin, '') || '/'
     window._data.serviceWorkerUrl = {{ index $.Site.Data.theme.private.assets "service-worker.js" | relURL }}
+    if (navigator.serviceWorker) {
+      navigator.serviceWorker.register(window._data.serviceWorkerUrl, { scope: window._data.serviceWorkerUrl })
+    }
   </script>
   <script src="{{ index $.Site.Data.theme.private.assets "service-worker-start.js" | relURL }}" async></script>
   {{- block "scripts" . }}{{- end }}
