--- a/layouts/index.html
+++ b/layouts/index.html
@@ -18,8 +18,7 @@
     id="top"
     style="--image:url('{{ .Params.top.image | relURL }}');">
     <div class="top-intro">
-      <h1 class="top-hub-name">Sunrise {{ $.Site.Data.settings.site.hubNameShort }}</h1>
-      <p class="top-details">{{ .Params.top.intro }}</p>
+      <h1 class="top-hub-name"> We Are Sunrise {{ $.Site.Data.settings.site.hubNameShort }}</h1>
     </div>
   </section>
   <section
