--- a/assets/Home.css
+++ b/assets/Home.css
@@ -300,7 +300,7 @@
 .events-interactive {
   max-width: 960px;
   margin: 0 auto;
-  max-height: 100vh;
+  max-height: 1000px;
   position: relative;
   display: grid;
   grid-template-rows: auto 1fr;
