--- a/assets/Home.css
+++ b/assets/Home.css
@@ -38,7 +38,6 @@
 /*#region TOP */
 
 .top {
-  background-image: var(--image);
   height: 60vh;
   position: relative;
   padding: 32px 16px;
@@ -46,16 +45,35 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-size: cover;
+  overflow: hidden;
+}
+
+.top-background {
+  position: absolute;
+  top: 0; left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  display: block;
+  object-fit: cover;
 }
 
 .top-logo {
-  width: 200px;
+  max-width: 150px;
+  max-height: 150px;
+  width: 100%;
 }
 
 .top-intro {
+  position: relative;
+  z-index: 2;
   max-width: 960px;
   text-align: center;
+  display: grid;
+  grid-template-rows: auto auto;
+  grid-auto-flow: row;
+  grid-row-gap: 32px;
+  place-items: center;
 }
 
 .top-hub-name {
